[package]
name = "notfail"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "^4.5.54", features = ["derive"] }
tokio = { version = "^1.49.0", features = ["full"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
dirs = "^6.0.0"
anyhow = "^1.0.100"
portable-pty = "^0.9.0"
libc = "^0.2.180"
